--- a/style.css
+++ b/style.css
@@ -158,10 +158,8 @@ section {
   background-color: var(--yellow);
   color: #000f15;
   border-radius: 6px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  padding: 5px;
+  text-align: center;
 }
 
 .home .content .share i {
@@ -593,7 +591,7 @@ section {
   justify-content: center;
   background-color: var(--yellow);
   border-radius: 10px;
-  padding: 5px;
+  padding: 2.5px;
 }
 
 .developed-by a:hover {
